infra/manifests/my/gamification_service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vibecheck
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamification-service
  namespace: vibecheck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamification-service
  template:
    metadata:
      labels:
        app: gamification-service
    spec:
      containers:
        - name: gamification-service
          image: ikeeo/vibecheck-gamification-serivce:3.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gamification-service
  namespace: vibecheck
spec:
  type: ClusterIP
  selector:
    app: gamification-service
  ports:
    - name: http
      port: 8080
      targetPort: http
