infra/manifests/my/gamification_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamification-service
  namespace: vibecheck
spec:
  ingressClassName: nginx
  rules:
    - host: gamification.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamification-service
                port:
                  number: 8080
