infra/manifests/my/minio_console_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: vibecheck
spec:
  ingressClassName: nginx
  rules:
    - host: minio.console.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
